fix issue bad link color contrast #4

--- a/src/_layout/layout.scss
+++ b/src/_layout/layout.scss
@@ -38,5 +38,5 @@ html, body {
  }
 
  a {
-   color: $color-charlote;
+   color: $color-denim;
  }
